--- a/src/RequestPrintLogin/SelectRegisUserOrRegisShop.form
+++ b/src/RequestPrintLogin/SelectRegisUserOrRegisShop.form
@@ -33,7 +33,7 @@
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Do you preferuser register user or shop register ?"/>
+        <Property name="text" type="java.lang.String" value="Do you prefer register user or shop ?"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
